# rowcol

./: .travis.yml  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md
benches/: matrix.rs
examples/: fib.rs
src/: lib.rs  macros.rs  matrix.rs  prelude.rs  util.rs  vector.rs
src/matrix/: arith.rs  iter.rs  mod.rs  ops.rs  ops_impl.rs
